Cleaning up code.  Using IntervalFunction versus the IntervalFunction inside of RetryConfig, whose acccessor is deprecated.

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,6 @@
 
     <modules>
         <module>gateway-service</module>
-        <module>api-service</module>
+        <module>widget-service</module>
     </modules>
 </project>
